<resources>

    <string name="app_name">Goal Tracking</string>

    <!-- Register screen Text -->

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Get started</string>
    <string name="intro_text_description">App will help you to achieve your goals </string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <!-- Sign up screen Text -->

    <string name="sign_up_description_text">Enter your name, email and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- Sign in screen Text -->
    <string name="sign_in_description_text"> Enter your name and email and password to sign in.</string>

    <!-- Text  -->
    <string name="please_wait">Please Wait..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="name_of_goal">Name Of Goal</string>
    <string name="description">Description</string>
    <string name="sort_by">Sort by</string>
    <string name="delete_all">Delete All</string>
    <string name="search">Search</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="title_goal">Title Goal</string>
    <string name="list_goals">List Goals</string>
    <string name="myname">Reem</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>

    <string-array name="period">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>


</resources>