<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/icon_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <group>
        <item
            android:id="@+id/menu_sort"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_Day"
                    android:title="@string/day"/>
                <item
                    android:id="@+id/menu_week"
                    android:title="@string/week"/>
                <item
                    android:id="@+id/menu_month"
                    android:title="@string/month"/>
                <item
                    android:id="@+id/menu_year"
                    android:title="@string/year"/>

            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

</menu>